# ini-parser

./: .gitattributes  .gitignore  CMakeLists.txt  README_CPP.md  conanfile.py  docker-compose.yaml  ini_example.ini  iniparser.c  iniparser.h  main.cpp
.github/: dependabot.yml
.github/workflows/: alpine32_testing.yaml  alpine64_testing.yaml  arch32_testing.yaml  arch64_testing.yaml  codeql.yml  debian32_testing.yaml  debian64_testing.yaml  fedora32_testing.yaml  fedora64_testing.yaml  macos32_testing.yaml  macos64_testing.yaml  mint32_testing.yaml  mint64_testing.yaml  ubuntu32_testing.yaml  ubuntu64_testing.yaml  windows32_testing.yaml  windows64_testing.yaml
examples/: cpp_example.cpp
include/: IniParser.hpp  ini_constants.h  ini_export.h  ini_filesystem.h  ini_hash_table.h  ini_mutex.h  ini_os_check.h  ini_parser.h  ini_status.h  ini_string.h
scripts/: build_and_install.ps1  build_and_install.sh  clean_build.ps1  clean_build.sh  run_tests.ps1  run_tests.sh
src/: IniParser.cpp  ini_filesystem.c  ini_hash_table.c  ini_mutex.c  ini_parser.c  ini_status.c  ini_string.c
tests/: helper.h  ini_create_context_tests.c  ini_filesystem_tests.c  ini_free_tests.c  ini_functional_tests.c  ini_get_value_tests.c  ini_good_tests.c  ini_hash_table_tests.c  ini_integration_tests.c  ini_load_tests.c  ini_mutex_tests.c  ini_parser_tests.c  ini_print_tests.c  ini_save_section_value_tests.c  ini_save_tests.c  ini_stress_tests.c
